fixed spacing issue on project data points, resolves #238

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -2119,8 +2119,13 @@
         font-size: 11px;
       }
       .project #main-content .content .main-content ul.data li p {
+        height: 23px;
         font-size: 15px;
         font-weight: bold;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+        
       }
       .project #main-content .content .main-content ul.project-updates li h3 {
         color: #84848b;
